--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stl-viewer",
-  "version": "0.12.0",
+  "name": "meritt-stl-viewer",
+  "version": "0.12.2",
   "description": "A component for viewing an STL object from a given URL by utilizing Three.js",
   "main": "dist/STLViewer.js",
   "keywords": [
@@ -12,15 +12,15 @@
     "React",
     "3D"
   ],
-  "author": "Chiedo",
+  "author": "Mhmdhammoud",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chiedolabs/react-stl-viewer.git"
+    "url": "https://github.com/Mhmdhammoud/react-stl-viewer"
   },
   "scripts": {
-    "build": "./node_modules/babel-cli/bin/babel.js -d dist src/ && NODE_ENV=production webpack -p --config webpack.config.prod.js",
-    "start": "NODE_ENV=development node --harmony server.js",
+    "build": "npx babel -d dist src && webpack -p --config webpack.config.prod.js",
+    "start": "node --harmony server.js",
     "prepublish": "yarn run build"
   },
   "dependencies": {
@@ -50,7 +50,6 @@
     "exports-loader": "^0.6.2",
     "express": "^4.13.3",
     "imports-loader": "^0.6.5",
-    "node-sass": "^3.4.2",
     "query-string": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
