--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meritt-stl-viewer",
-  "version": "0.12.2",
+  "version": "0.12.3",
   "description": "A component for viewing an STL object from a given URL by utilizing Three.js",
   "main": "dist/STLViewer.js",
   "keywords": [
@@ -24,14 +24,13 @@
     "prepublish": "yarn run build"
   },
   "dependencies": {
-    "halogenium": "^2.2.3",
     "prop-types": "^15.6.1",
     "three": "^0.72.0",
     "three-orbit-controls": "^72.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.2.0",
-    "react-dom": ">=16.2.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
@@ -43,19 +42,18 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "ejs": "^2.3.4",
-    "eslint": "^1.10.3",
+    "ejs": "^3.1.8",
+    "eslint": "^8.17.0",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "exports-loader": "^0.6.2",
     "express": "^4.13.3",
     "imports-loader": "^0.6.5",
     "query-string": "^3.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.5.0",
     "rimraf": "^2.4.3",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
