--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meritt-stl-viewer",
+  "name": "@meritt-dev/stl-viewer",
   "version": "0.13.12",
   "description": "A component for viewing an STL object from a given URL by utilizing Three.js",
   "main": "dist/App.js",
